create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3000,3 +3000,60 @@ body {
     width: 100% !important;
   }
 }
+.cid-qGYHvHvziJ {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/dsc03623-2000x1125.jpg");
+}
+.cid-qGYHvHvziJ .mbr-figure {
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.cid-qGYHvHvziJ .mbr-figure img {
+  height: 100%;
+}
+@media (max-width: 991px) {
+  .cid-qGYHvHvziJ .mbr-figure img {
+    width: 100% !important;
+  }
+}
+.cid-qGYHVZEeyA {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/dsc03623-2000x1125.jpg");
+}
+.cid-qGYHVZEeyA .mbr-figure {
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.cid-qGYHVZEeyA .mbr-figure img {
+  height: 100%;
+}
+@media (max-width: 991px) {
+  .cid-qGYHVZEeyA .mbr-figure img {
+    width: 100% !important;
+  }
+}
+.cid-qGYIpaQDzu {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/dsc03623-2000x1125.jpg");
+}
+.cid-qGYIpaQDzu .mbr-figure {
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.cid-qGYIpaQDzu .mbr-figure img {
+  height: 100%;
+}
+@media (max-width: 991px) {
+  .cid-qGYIpaQDzu .mbr-figure img {
+    width: 100% !important;
+  }
+}
