--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3057,3 +3057,22 @@ body {
     width: 100% !important;
   }
 }
+.cid-qGYLqOkb38 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/dsc03623-2000x1125.jpg");
+}
+.cid-qGYLqOkb38 .mbr-figure {
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.cid-qGYLqOkb38 .mbr-figure img {
+  height: 100%;
+}
+@media (max-width: 991px) {
+  .cid-qGYLqOkb38 .mbr-figure img {
+    width: 100% !important;
+  }
+}
