--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2470,6 +2470,25 @@ body {
     width: 100% !important;
   }
 }
+.cid-qGZ59xdEiY {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/dsc03632-2000x1125.jpg");
+}
+.cid-qGZ59xdEiY .mbr-figure {
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.cid-qGZ59xdEiY .mbr-figure img {
+  height: 100%;
+}
+@media (max-width: 991px) {
+  .cid-qGZ59xdEiY .mbr-figure img {
+    width: 100% !important;
+  }
+}
 .cid-qGV9lleyHx .navbar {
   padding: .5rem 0;
   background: #333333;
