--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2204,6 +2204,8 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-qGVaGwjNGY {
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-image: url("../../../assets/images/dsc03632-2000x1125.jpg");
 }
 .cid-qGVaGwjNGY .mbr-figure {
